--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
+    "framer-motion": "^10.16.5",
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
